# PixelLab-Image-Processing-with-SDL

./: .clang-format  CMakeLists.txt  README.md
include/: App.hpp  Button.hpp  Component.hpp  Histogram.hpp  SDLDeleter.hpp
proj1/: README.md
proj1/src/: equalization.cpp  equalization.h  main.cpp
src/: App.cpp  Button.cpp  Histogram.cpp  main.cpp
